clang/test/BSC/Negative/Generic/GenericTypeMethods/member_func_cc1_coredump/member_func_cc1_coredump.cbs
// RUN: %clang_cc1 -verify %s

#include "stdlib.h" // expected-error {{'stdlib.h' file not found}} 

struct PollResult<T> {
    _Bool isPending;
};

int struct PollResult<T>::completed()     {
    return 0;
}

struct _Futureread {};

int struct _Futureread::poll(struct _Futureread *this)     {
    struct PollResult<int> poll_result;
    return struct PollResult<int>::completed();
}

